---
source: src/builder/tests/inserts/insert_normal.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
INSERT INTO
  "public"."mysimpletable" ("first-name", "last-name")
VALUES
  ($1, $2);
